; ModuleID = '/home/carl/AnghaBench/i3/src/extr_tree.c_tree_render.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_tree.c_tree_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@croot = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [23 x i8] c"-- BEGIN RENDERING --\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"-- END RENDERING --\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tree_render() #0 {
  %1 = load %struct.TYPE_5__*, %struct.TYPE_5__** @croot, align 8
  %2 = icmp eq %struct.TYPE_5__* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %15

4:                                                ; preds = %0
  %5 = call i32 @DLOG(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** @croot, align 8
  %7 = call i32 @mark_unmapped(%struct.TYPE_5__* %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @croot, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @croot, align 8
  %11 = call i32 @render_con(%struct.TYPE_5__* %10, i32 0)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** @croot, align 8
  %13 = call i32 @x_push_changes(%struct.TYPE_5__* %12)
  %14 = call i32 @DLOG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @DLOG(i8*) #1

declare dso_local i32 @mark_unmapped(%struct.TYPE_5__*) #1

declare dso_local i32 @render_con(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @x_push_changes(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
